[package]
name = "apevents"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-webfinger = "0.4"
mime = "0.3"
sqlx = { version = "0.6", features = [ "runtime-async-std-native-tls", "postgres", "uuid", "json", "macros" ] }
anyhow = "1"
async-trait = {version = "0.1"}
serde = "1.0"
serde_derive = "1.0"
thiserror = "1"

[profile.dev.package.sqlx-macros]
opt-level = 3
