[package]
name = "apevents"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-webfinger = "0.4"
mime = "0.3"
sqlx = { version = "0.6", features = [ "runtime-async-std-native-tls", "postgres", "uuid", "json", "macros" ] }
anyhow = "1"
async-trait = {version = "0.1"}
serde = "1.0"
serde_derive = "1.0"
thiserror = "1"
activitypub_federation = "0.3"
reqwest = { version = "0.11", features = ["json"] }
sha2 = "0.10"
http-signature-normalization-actix = { version = "0.6.1", default-features = false, features = ["server", "sha-2"] }
http-signature-normalization-reqwest = { version = "0.8.0", default-features = false, features = ["sha-2", "middleware"] }
tokio = "1.23"
url = { version = "2.3", features = ["serde"] }
activitystreams-kinds = "0.3.0"
rand = "0.8"
enum_delegate = "0.2"
serde_json = { version = "1.0.91", features = ["preserve_order"] }
petname = "1"
askama = { version = "0.11.1", default-features = false, features = ["with-actix-web"] }
askama_actix = "0.13"
actix-files = "0.6.2"
log = "0.4.17"
env_logger = "0.10.0"
reqwest-middleware = "0.2.0"
http = "0.2.8"
httpdate = "1.0.2"
openssl = { version = "0.10" }
base64 = "0.20.0"

[profile.dev.package.sqlx-macros]
opt-level = 3

[build-dependencies]
askama_actix = "0.13"
anyhow = "1"
